added inventory functions
